--- a/404.html
+++ b/404.html
@@ -20,11 +20,11 @@ permalink: /404.html
         <meta name="theme-color" content="#ffffff">
     </head>
     <body>
-        <header><a href="index.html">back</a></header>
+        <header><a href="index.html">home</a></header>
         <main>
             <div id="404">
-                <h1>–   404   –</h1>
-                <h1>Jei is displeased</h1>
+                <p>–   404   –</p>
+                <p>Jei is displeased</p>
                 <img src="img/bossjei.png">
             </div>
         </main>
