--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hertford Ball Sponsors</title>
+        <title>Hertford Ball</title>
         <link rel="stylesheet" href="css/style.css">
         <meta charset="UTF-8">
         <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
@@ -24,20 +24,20 @@
                 <h1>paradise found</h1>
                 <p>tickets on sale friday of 3<sup>rd</sup> week michaelmas</p>
             </div>
-            <nav><ul>
-                    <li onclick="scrollToSection(2)">theme</li>
-                    <li onclick="scrollToSection(3)">entertainment</li>
-                    <li onclick="scrollToSection(4)">food &amp; drink</li>
-                    <li onclick="scrollToSection(6)">sponsors</li>
-                    <li onclick="scrollToSection(7)">committee</li>
-            </ul></nav>
+            <ul class="nav">
+                <li><a href="#" onclick="scrollToSection(2)">theme</a>
+                </li><li><a href="#">entertainment</a>
+                </li><li><a href="#">food &amp; drink</a>
+                </li><li><a href="#">sponsors</a>
+                </li><li><a href="#">committee</a></li>
+            </ul>  
         </header>
         <main>
             <div class="rotateright postcard">
-                <img class="pimgparavion" src="img/paravionstamp.png">
-                <img class="pimgparadise" src="img/paradisestamp.png">
-                <img class="pimgwavyline" src="img/wavylinestamp.png">
-                <img class="pimglogo" src="imgs/stamp.png">
+                <img class="pparavion" src="img/pParAvion.png">
+                <img class="pparadise" src="img/pParadise.png">
+                <img class="pwavyline" src="img/pWavyLine.png">
+                <img class="plogo" src="img/stamp.png">
                 <div class="postcardleft">
                     <h1>Theme</h1>
                     <p>Soon, Christian McBride’s anticipated bass
