--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </div>
 
             <div class="rotateright postcard">
-                <img class="pimgparavion" src="img/paravionstamp.png">
-                <img class="pimgparadise" src="img/paradisestamp.png">
-                <img class="pimgwavyline" src="img/wavylinestamp.png">
-                <img class="pimglogo" src="imgs/stamp.png">
+                <img class="pparavion" src="img/pParAvion.png">
+                <img class="pparadise" src="img/pParadise.png">
+                <img class="pwavyline" src="img/pWavyLine.png">
+                <img class="plogo" src="img/stamp.png">
                 <div class="postcardleft">
                     <h1>Theme</h1>
                     <p>Soon, Christian McBride’s anticipated bass
@@ -76,10 +76,10 @@
             </div>
 
             <div class="rotateright postcard">
-                <img class="pimgparavion" src="img/paravionstamp.png">
-                <img class="pimgparadise" src="img/paradisestamp.png">
-                <img class="pimgwavyline" src="img/wavylinestamp.png">
-                <img class="pimglogo" src="imgs/stamp.png">
+                <img class="pparavion" src="img/pParAvion.png">
+                <img class="pparadise" src="img/pParadise.png">
+                <img class="pwavyline" src="img/pWavyLine.png">
+                <img class="plogo" src="img/stamp.png">
                 <div class="postcardleft">
                     <h1>Theme</h1>
                     <p>Soon, Christian McBride’s anticipated bass
@@ -97,10 +97,10 @@
             </div>
 
             <div class="rotateright postcard">
-                <img class="pimgparavion" src="img/paravionstamp.png">
-                <img class="pimgparadise" src="img/paradisestamp.png">
-                <img class="pimgwavyline" src="img/wavylinestamp.png">
-                <img class="pimglogo" src="imgs/stamp.png">
+                <img class="pparavion" src="img/pParAvion.png">
+                <img class="pparadise" src="img/pParadise.png">
+                <img class="pwavyline" src="img/pWavyLine.png">
+                <img class="plogo" src="img/stamp.png">
                 <div class="postcardleft">
                     <h1>Sponsors</h1>
                     <a class="button" href="sponsors.html">view our sponsorship packages</a>
