--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>  
         </header>
         <main>
-            <div id="theme" class="rotateright postcard">
+            <div id="theme" class="rotateright postcard infocard">
                 <img class="pparavion" src="img/pParAvion.png">
                 <img class="pparadise" src="img/pParadise.png">
                 <img class="pwavyline" src="img/pWavyLine.png">
@@ -55,14 +55,17 @@
                 </div>
             </div>
 
-            <div id="entertainment" class="rotateleft postcard">
+            <div id="entertainment" class="rotateleft postcard infocard">
                 <img class="pparavion" src="img/pParAvion.png">
                 <img class="pparadise" src="img/pParadise.png">
                 <img class="pwavyline" src="img/pWavyLine.png">
                 <img class="plogo" src="img/stamp.png">
                 <div class="postcardleft">
-                    <h1>Theme</h1>
-                    <p>Hello, it's me. This is the bee movie script. This is James Hopper of the Jupiter Mission. The film is 2001: A Space Odyssey. The Dawn of Man sure dragged huh.</p>
+                    <h1>Entertainment</h1>
+                    <p>Hello, it's me. This is the bee movie script. This
+                        is James Hopper of the Jupiter Mission. The film is
+                        2001: A Space Odyssey. The Dawn of Man sure dragged
+                        huh.</p>
                 </div>
                 <div class="postcardright">
                     <p>Hertford College</p>
@@ -71,7 +74,7 @@
                 </div>
             </div>
 
-            <div id="fooddrink" class="rotateright postcard">
+            <div id="fooddrink" class="rotateright postcard infocard">
                 <img class="pparavion" src="img/pParAvion.png">
                 <img class="pparadise" src="img/pParadise.png">
                 <img class="pwavyline" src="img/pWavyLine.png">
@@ -92,13 +95,15 @@
                 </div>
             </div>
 
-            <div id="sponsors" class="rotateleft postcard">
+            <div id="sponsors" class="rotateleft postcard infocard">
                 <img class="pparavion" src="img/pParAvion.png">
                 <img class="pparadise" src="img/pParadise.png">
                 <img class="pwavyline" src="img/pWavyLine.png">
                 <img class="plogo" src="img/stamp.png">
                 <div class="postcardleft">
                     <h1>Sponsors</h1>
+                    <p>We are currently accepting sponsors for the ball,
+                    and are offering several packages and opportuities:</p>
                     <a class="button" href="sponsors.html">view our sponsorship packages</a>
                     <a href="mailto:sponsorship@hertfordball.co.uk">contact our sponsorship guy</a>
                 </div>
@@ -110,82 +115,79 @@
             </div>
 
             <div id="committee">
-                <h1>Committee</h1>
-                <div id="leftcontact">
-                    <div class="deet">
-                        <h1>President</h1>
-                        <h2>Jei Diwakar</h2>
-                        <h3><a href="mailto:president@hertfordball.co.uk">
-                            president&#64;hertfordball.co.uk
-                        </a></h3>
-                    </div>
-                    <div class="Deet">
-                        <h1>Secretary</h1>
-                        <h2>Hae Jin Yang</h2>
-                        <h3><a href="mailto:secretary@hertfordball.co.uk">
-                            secretary&#64;hertfordball.co.uk
-                        </a></h3>
-                    </div>
-                    <div class="deet">
-                        <h1>Marketing</h1>
-                        <h2>Ellie Foster</h2>
-                        <h3><a href="mailto:marketing@hertfordball.co.uk">
-                            marketing&#64;hertfordball.co.uk
-                        </a></h3>
-                    </div>
-                    <div class="deet">
-                        <h1>Logistics</h1>
-                        <h2>Beth Partridge</h2>
-                        <h3><a href="mailto:logistics@hertfordball.co.uk">
-                            logistics&#64;hertfordball.co.uk
-                        </a></h3>
-                    </div>
-                    <div class="deet">
-                        <h1>Tech Director</h1>
-                        <h2>Michael Agius</h2>
-                        <h3><a href="mailto:nerd@michaelagius.uk">
-                            nerd&#64;michaelagius.uk
-                        </a></h3>
-                    </div>
+                <h1 id="committeetitle">Committee</h1>
+                <div class="deet postcard smallrotateleft">
+                    <h1>President</h1>
+                    <h2>Jei Diwakar</h2>
+                    <h3><a href="mailto:president@hertfordball.co.uk">
+                        president&#64;hertfordball.co.uk
+                    </a></h3>
                 </div>
-                <div id="rightcontact">
-                    <div class="Deet">
-                        <h1>Vice President</h1>
-                        <h2>Justine Raoult</h2>
-                        <h3><a href="mailto:vicepresident@hertfordball.co.uk">
-                            vicepresident&#64;hertfordball.co.uk
-                        </a></h3>
-                    </div>
-                    <div class="deet">
-                        <h1>Sponsorship</h1>
-                        <h2>Jong Kwon</h2>
-                        <h3><a href="mailto:sponsorship@hertfordball.co.uk">
-                            sponsorship&#64;hertfordball.co.uk
-                        </a></h3>
-                    </div>
-                    <div class="Deet">
-                        <h1>Treasurer</h1>
-                        <h2>Holly Wagstaff</h2>
-                        <h3><a href="mailto:treasurer@hertfordball.co.uk">
-                            treasurer&#64;hertfordball.co.uk
-                        </a></h3>
-                    </div>
-                    <div class="Deet">
-                        <h1>Health and Safety</h1>
-                        <h2>Hae Jin Yang</h2>
-                        <h3><a href="mailto:safety@hertfordball.co.uk">
-                            safety&#64;hertfordball.co.uk
-                        </a></h3>
-                    </div>
-                    <div class="Deet">
-                        <h1>Food and Drink</h1>
-                        <h2>Chloë Jacklin &amp; Aditi Aggarwal</h2>
-                        <h3><a href="mailto:catering@hertfordball.co.uk">
-                            catering&#64;hertfordball.co.uk
-                        </a></h3>
-                    </div>
+                <div class="deet postcard smallrotateright">
+                    <h1>Vice President</h1>
+                    <h2>Justine Raoult</h2>
+                    <h3><a href="mailto:vicepresident@hertfordball.co.uk">
+                        vicepresident&#64;hertfordball.co.uk
+                    </a></h3>
+                </div>
+                <div class="deet postcard smallrotateleft">
+                    <h1>Sponsorship</h1>
+                    <h2>Jong Kwon</h2>
+                    <h3><a href="mailto:sponsorship@hertfordball.co.uk">
+                        sponsorship&#64;hertfordball.co.uk
+                    </a></h3>
+                </div>
+                <div class="deet postcard smallrotateright">
+                    <h1>Marketing</h1>
+                    <h2>Ellie Foster</h2>
+                    <h3><a href="mailto:marketing@hertfordball.co.uk">
+                        marketing&#64;hertfordball.co.uk
+                    </a></h3>
+                </div>
+                <div class="deet postcard smallrotateright">
+                    <h1>Secretary</h1>
+                    <h2>Hae Jin Yang</h2>
+                    <h3><a href="mailto:secretary@hertfordball.co.uk">
+                        secretary&#64;hertfordball.co.uk
+                    </a></h3>
+                </div>
+                <div class="deet postcard smallrotateleft">
+                    <h1>Logistics</h1>
+                    <h2>Beth Partridge</h2>
+                    <h3><a href="mailto:logistics@hertfordball.co.uk">
+                        logistics&#64;hertfordball.co.uk
+                    </a></h3>
+                </div>
+                <div class="deet postcard smallrotateleft">
+                    <h1>Treasurer</h1>
+                    <h2>Holly Wagstaff</h2>
+                    <h3><a href="mailto:treasurer@hertfordball.co.uk">
+                        treasurer&#64;hertfordball.co.uk
+                    </a></h3>
+                </div>
+                <div class="deet postcard smallrotateright">
+                    <h1>Tech Director</h1>
+                    <h2>Michael Agius</h2>
+                    <h3><a href="mailto:nerd@michaelagius.uk">
+                        nerd&#64;michaelagius.uk
+                    </a></h3>
+                </div>
+                <div class="deet postcard smallrotateright">
+                    <h1>Health and Safety</h1>
+                    <h2>Hae Jin Yang</h2>
+                    <h3><a href="mailto:safety@hertfordball.co.uk">
+                        safety&#64;hertfordball.co.uk
+                    </a></h3>
+                </div>
+                <div class="deet postcard smallrotateright">
+                    <h1>Food and Drink</h1>
+                    <h2>Chloë Jacklin<br>Aditi Aggarwal</h2>
+                    <h3><a href="mailto:catering@hertfordball.co.uk">
+                        catering&#64;hertfordball.co.uk
+                    </a></h3>
                 </div>
             </div>
         </main>
+        <div id="bottombuffer"></div>
     </body>
 </html>
