--- a/404.html
+++ b/404.html
@@ -22,10 +22,12 @@ permalink: /404.html
     <body>
         <header><a href="index.html">home</a></header>
         <main>
-            <div id="404">
-                <p>–   404   –</p>
-                <p>Jei is displeased</p>
+            <div id="sos">
+                <p>auto_redir_404</p><br><br>
+                <p>let jeiSpin = {</p>
                 <img src="img/bossjei.png">
+                
+                <p>}.hover();</p>
             </div>
         </main>
     </body>
