--- a/sponsors.html
+++ b/sponsors.html
@@ -20,7 +20,7 @@
         <header><a href="index.html">back</a></header>
 
         <main>
-            <div id="title">
+            <div id="stitle">
                 <h1>Sponsorship Packages</h1>
             </div>
 
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="Deet">
+            <div class="deet">
                 <h1>Sponsorship Contact</h1>
                 <h2>Jong Kwon</h2>
                 <h3><a href="mailto:sponsorship@hertfordball.co.uk">
