--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="js/scroll.js" type="text/javascript"></script>
     </head>
     <body>
+        <div id="backing"></div>
         <header>
             <img id="logo" src="img/stamp.png">
             <div id="foottop">site by antonia siu and michael agius</div>
