--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
 
             <div id="committee">
-                <h1 id="committeetitle">Committee</h1>
+                <div id="committeetitle" class="postcard">Committee</div>
                 <div class="deet postcard smallrotateleft">
                     <h1>President</h1>
                     <h2>Jei Diwakar</h2>
