--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
                 <img class="plogo" src="img/stamp.png">
                 <div class="postcardleft">
                     <h1>Theme</h1>
-                    <p>Soon, Christian McBride’s anticipated bass
-                        riff joined the refrain. The great speeches faded
-                        along with the drum line, and the jazz took hold, as
-                        was permissible since the foundation had been laid:
-                        Jazz is a music, a history, a culture. That is,
-                        African-American culture is intrinsic to jazz.</p>
+                    <p>Obviously no white suits. Black suit, black tie, reasonable
+                    dress and cover the shoulders for some reason. And everyone can
+                    bring a cane for all the good it'll do them. Do try the punch.
+                    Paradise shall come in the form of lights everywhere and glorious
+                    Holywell quad.</p>
                 </div>
                 <div class="postcardright">
                     <p>Hertford College</p>
@@ -63,10 +62,9 @@
                 <img class="plogo" src="img/stamp.png">
                 <div class="postcardleft">
                     <h1>Entertainment</h1>
-                    <p>Hello, it's me. This is the bee movie script. This
-                        is James Hopper of the Jupiter Mission. The film is
-                        2001: A Space Odyssey. The Dawn of Man sure dragged
-                        huh.</p>
+                    <p>Emily the Snake. Just tonnes of Emily the Snake for hours
+                    on end, as if you slept in the Baring Room itself. Also some
+                    other bands, but I can't name them, so Emily the Snake.</p>
                 </div>
                 <div class="postcardright">
                     <p>Hertford College</p>
@@ -82,12 +80,10 @@
                 <img class="plogo" src="img/stamp.png">
                 <div class="postcardleft">
                     <h1>Food &amp; Drink</h1>
-                    <p>Soon, Christian McBride’s anticipated bass
-                        riff joined the refrain. The great speeches faded
-                        along with the drum line, and the jazz took hold, as
-                        was permissible since the foundation had been laid:
-                        Jazz is a music, a history, a culture. That is,
-                        African-American culture is intrinsic to jazz.</p>
+                    <p>Our glorious master Hassan will be making an appearance on
+                    the night, providing burgers and wraps and veggie thing to all
+                    at a reduced price. And we might have some food for sober people
+                    too.</p>
                 </div>
                 <div class="postcardright">
                     <p>Hertford College</p>
