--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <div id="foottop">site by antonia siu and michael agius</div>
     <div id="title">
       <h1>paradise found</h1>
-      <a id="tsplash2" href="http://tickets.hertfordball.co.uk">buy tickets</a>
+      <div id="titlehighlight">
+        <h5>tickets are now sold out<br></h5>
+        <a id="tsplash2" href="http://tickets.hertfordball.co.uk">tickets area</a>
+      </div>
     </div>
     <ul class="nav">
       <li><a href="#" onclick="scrollToSection('theme', 1)">theme</a>
@@ -94,8 +97,13 @@
     <div id="sponsors">
       <div class="postcard postcardtitle">Our Sponsors</div>
       <div id="imgcontainer">
-        <img id="walters" src="img/walterse.png">
-        <img id="shepherd" src="img/shepherde.png">
+        <div>
+          <img id="walters" src="img/walterse.png">
+          <img id="teech" src="img/teech.png">
+        </div>
+        <div>
+          <img id="shepherd" src="img/shepherde.png">
+        </div>
       </div>
       <div class="infocard postcard shinecard darkcard">
         <h1>If you need a suit</h1>
