added link to old site

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div>
     <div id="box">
       <div>
-        <p id="hb">Hertford Ball</p>
+        <p id="hb"><a href="/indexold">Hertford Ball</a></p>
         <p id="c20">20</p>
       </div>
       <div>
